update 5Mel2026 - initial setup function and role security